--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "delay": "2500",
     "env": {
       "NODE_ENV": "development",
-      "PORT": 4000
+      "PORT": 4000,
+      "DB_HOST": "mongodb://localhost:27017"
     }
   }
 }
